@@ -1,3 +1,12 @@
+nenolod     2006/01/08 22:33:36 UTC	(20060108-4535)
+  Log:
+  Use *@host if given a nick, instead of user@host when AKILLing. It seems much more intutive this way...
+  
+
+  Changes:	Modified:
+  +4 -4		trunk/modules/operserv/akill.c (File Modified) 
+
+
 nenolod     2006/01/07 17:24:23 UTC	(20060107-4533)
   Log:
   Blank out the contents of helpentry_t before we plug it in with information.
